# acrossword

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/acrossword/: __init__.py  server.py
src/acrossword/documents/: documents.py
src/acrossword/rankers/: classifier.py  rank.py  server.py
