[metadata]
name = acrossword
version = 0.0.1
author = ckoshka
description = Locally-hosted semantic search + web crawling + text processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckoshka/acrossword

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src