[metadata]
name = acrossword
version = 0.0.2
author = ckoshka
description = Locally-hosted semantic search + web crawling + text processing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ckoshka/acrossword

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    aiohttp==3.8.1
    jusText==3.0.0
    loguru==0.6.0
    nltk==3.7
    numpy==1.22.2
    orjson==3.6.7
    quart==0.16.3
    regex==2022.1.18
    requests==2.25.1
    sentence_transformers==2.2.0
    slate==0.5.2
    torch==1.10.2

[options.packages.find]
where = src